# OpenW3D

./: .gitignore  .gitmodules  BGFX-BUILD-GUIDE.md  BGFX-CHECKLIST-ASSESSMENT.md  BGFX-FINISH-CHECKLIST.md  BOOTSTRAP.md  BRANCH-RESTRUCTURE-PLAN.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  IDENTITY.md  MEMORY.md  OPENW3D-BGFX-RESEARCH-STATUS-REPORT.md  PR116-status.md  RECOVERED-BGFX-CONTEXT.md  RENDER_ARCHITECTURE_ANALYSIS.md  TOOLS.md  USER.md  bgfx_task.ps1  local-ci-bgfx.ps1  vcpkg.json
Code/: CMakeLists.txt  commando.dsw  openw3d_dinput_compat.h
Code/BandTest/: BandTest.cpp  BandTest.h  BandTest.rc  CMakeLists.txt  afxres.h  resource.h
Code/BinkMovie/: BINKMovie.cpp  BINKMovie.h  BinkPlayer.cpp  BinkPlayer.h  CMakeLists.txt  FFMpegPlayer.cpp  FFMpegPlayer.h  MoviePlayer.h  NullMoviePlayer.h  subtitle.cpp  subtitle.h  subtitlemanager.cpp  subtitlemanager.h  subtitleparser.cpp  subtitleparser.h
Code/Combat/: CMakeLists.txt  CNCModeSettings.cpp  CNCModeSettings.h  Combat.dsp  SoundEnvironment.cpp  SoundEnvironment.h  WeatherMgr.cpp  WeatherMgr.h  action.cpp  action.h  actionparams.h  activeconversation.cpp  activeconversation.h  airstripgameobj.cpp  airstripgameobj.h  animcontrol.cpp  animcontrol.h  apppackettypes.h  armedgameobj.cpp  armedgameobj.h  assetdep.cpp  assetdep.h  assets.cpp  assets.h  backgroundmgr.cpp  backgroundmgr.h  basecontroller.cpp  basecontroller.h  basegameobj.cpp  basegameobj.h  beacongameobj.cpp  beacongameobj.h  bones.cpp  bones.h  building.cpp  building.h  buildingaggregate.cpp  buildingaggregate.h  buildingmonitor.cpp  buildingmonitor.h  (+215 more)
Code/Commando/: AnnounceEvent.cpp  AnnounceEvent.h  AutoStart.cpp  AutoStart.h  CDKeyAuth.cpp  CDKeyAuth.h  CMakeLists.txt  ConsoleMode.cpp  ConsoleMode.h  DlgDownload.cpp  DlgDownload.h  DlgMPConnect.cpp  DlgMPConnect.h  DlgMPConnectionRefused.cpp  DlgMPConnectionRefused.h  DlgMPTeamSelect.cpp  DlgMPTeamSelect.h  DlgMessageBox.cpp  DlgMessageBox.h  DlgPasswordPrompt.cpp  DlgPasswordPrompt.h  DlgQuickmatch.cpp  DlgQuickmatch.h  DlgRestart.cpp  DlgRestart.h  DlgWOLAutoStart.cpp  DlgWOLAutoStart.h  DlgWOLLogon.cpp  DlgWOLLogon.h  DlgWOLSettings.cpp  DlgWOLSettings.h  DlgWOLWait.cpp  DlgWOLWait.h  DlgWebPage.cpp  DlgWebPage.h  FirewallWait.cpp  FirewallWait.h  GameResSend.cpp  GameResSend.h  GameSpyBanList.cpp  (+393 more)
Code/GitInfo/: CMakeLists.txt  GitInfo.cmake  GitWatcher.cmake  gitinfo.cpp.in  gitinfo.h
Code/Installer/: CardSelectionDialog.cpp  CardSelectionDialog.h  CodeControl.h  CopyDialog.cpp  CopyDialog.h  CopyThread.cpp  CopyThread.h  DirectoryBrowser.cpp  DirectoryBrowser.h  DirectoryDialog.cpp  DirectoryDialog.h  ErrorHandler.cpp  ErrorHandler.h  FinalDialog.cpp  FinalDialog.h  FolderDialog.cpp  FolderDialog.h  InstallMenuDialog.cpp  InstallMenuDialog.h  Installer.cpp  Installer.h  LicenseDialog.cpp  LicenseDialog.h  MessageBox.cpp  MessageBox.h  RAMFileFactory.cpp  RAMFileFactory.h  RegistryManager.cpp  RegistryManager.h  ReviewDialog.cpp  ReviewDialog.h  SafeTimer.cpp  SafeTimer.h  SerialDialog.cpp  SerialDialog.h  TransitionDialog.cpp  TransitionDialog.h  Translator.cpp  Translator.h  Utilities.cpp  (+11 more)
Code/Launcher/: 256bmp.c  BFISH.CPP  BFISH.H  CMakeLists.txt  Protect.cpp  configfile.cpp  configfile.h  dialog.cpp  dictionary.h  filed.h  findpatch.cpp  findpatch.h  launcher.dsp  loadbmp.cpp  loadbmp.h  main.cpp  monod.cpp  patch.cpp  patch.h  process.cpp  process.h  resource.h  streamer.cpp  streamer.h  wdebug.cpp  wdebug.h  winblows.cpp  winblows.h  wstring.cpp  wstring.h  wstypes.h
Code/SControl/: CMakeLists.txt  servercontrol.cpp  servercontrol.h  servercontrolsocket.cpp  servercontrolsocket.h
Code/Scripts/: CMakeLists.txt  Common.h  CustomEvents.h  DLLmain.cpp  DPrint.cpp  DrMobius.cpp  GroupControl.cpp  GroupScript.cpp  Mission00.cpp  Mission00.h  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission1.h  Mission10.cpp  Mission10.h  Mission11.cpp  Mission11.h  Mission12.h  Mission2.h  Mission4.h  Mission5.h  Mission6.h  Mission7.h  Mission8.h  Mission9.h  MissionDemo.cpp  MissionS04.cpp  MissionX0.cpp  MissionX0.h  PRDemo.cpp  PRDemo.h  ScriptFactory.cpp  ScriptNode.h  ScriptRegistrant.h  (+40 more)
Code/Tests/: bgfx_init_test.cpp  d3d11_test.cpp  headless_bgfx.cpp  launcher.cpp  launcher2.cpp
Code/Tools/: CMakeLists.txt
Code/WOLBrowser/: WOLBrowser.h  WOLBrowser_i.c
Code/WWAudio/: AudibleSound.cpp  AudibleSound.h  AudioEvents.cpp  AudioEvents.h  AudioSaveLoad.cpp  AudioSaveLoad.h  CMakeLists.txt  FilteredSound.cpp  FilteredSound.h  Listener.cpp  Listener.h  LogicalListener.cpp  LogicalListener.h  LogicalSound.cpp  LogicalSound.h  PriorityVector.h  Sound3D.cpp  Sound3D.h  SoundBuffer.cpp  SoundBuffer.h  SoundCullObj.h  SoundPseudo3D.cpp  SoundPseudo3D.h  SoundScene.cpp  SoundScene.h  SoundSceneObj.cpp  SoundSceneObj.h  StaticSoundCullObj.h  Threads.cpp  Threads.h  Utils.cpp  Utils.h  WWAudio.cpp  WWAudio.h  listenerhandle.cpp  listenerhandle.h  sound2dhandle.cpp  sound2dhandle.h  sound3dhandle.cpp  sound3dhandle.h  (+4 more)
Code/WWMath/: CMakeLists.txt  aabox.cpp  aabox.h  aabtreecull.cpp  aabtreecull.h  cardinalspline.cpp  cardinalspline.h  castres.h  catmullromspline.cpp  catmullromspline.h  colmath.cpp  colmath.h  colmathaabox.cpp  colmathaabtri.cpp  colmathfrustum.cpp  colmathfrustum.h  colmathline.cpp  colmathobbobb.cpp  colmathobbox.cpp  colmathobbtri.cpp  colmathplane.cpp  colmathplane.h  colmathsphere.cpp  cullsys.cpp  cullsys.h  culltype.h  curve.cpp  curve.h  euler.cpp  euler.h  frustum.cpp  gridcull.cpp  gridcull.h  hermitespline.cpp  hermitespline.h  lineseg.cpp  lineseg.h  lookuptable.cpp  lookuptable.h  matrix3.cpp  (+32 more)
Code/WWOnline/: CMakeLists.txt  GameResField.cpp  GameResField.h  GameResPacket.cpp  GameResPacket.h  PingProfile.cpp  PingProfile.h  RefCounted.h  RefPtr.h  WOLChannel.cpp  WOLChannel.h  WOLChatMsg.cpp  WOLChatMsg.h  WOLChatObserver.cpp  WOLChatObserver.h  WOLConnect.cpp  WOLConnect.h  WOLDownload.cpp  WOLDownload.h  WOLErrorUtil.cpp  WOLErrorUtil.h  WOLGame.cpp  WOLGame.h  WOLGameOptions.cpp  WOLLadder.h  (+24 more)
(+1914 files in other folders)
